Fix post header spacing

--- a/less/site.less
+++ b/less/site.less
@@ -5215,9 +5215,12 @@ body * {
   margin: auto;
 }
 
+.post-header {
+  padding: 10px;
+}
+
 .post-title {
-  padding-top: 20px;
-  margin-bottom: 10px;
+  margin: 10px 0px;
   font-family: PT Sans, Open Sans, sans-serif;
   font-size: 32px;
   color: white;
@@ -5277,5 +5280,11 @@ body * {
   }
   .youtube {
     height: 100%;
+  }
+  .post-title {
+    font-size: 18px;
+  }
+  .post-info {
+    font-size: 14px;
   }
 }
